Mon Oct 30 23:41:58 2006  Tim Janik  <timj@gtk.org>

	* r+d-files/bse-ellf.c: extended output to server as a code generator 
	for bse/tests/filtertest.cc.

Mon Oct 30 23:18:50 2006  Tim Janik  <timj@gtk.org>

	* r+d-files/bse-ellf.c: fixed compilation command, complex function
	names. wrapped printf functions by macros to enable/disable output.

Mon Oct 30 23:02:18 2006  Tim Janik  <timj@gtk.org>

	* r+d-files/bse-ellf.c: added early version (SVN r3971) of the
	concatenated ellf.c program which was checked into BSE as
	bseiirfilter.c and then copied to bseellipticfilter.c.

Mon Oct 30 22:09:25 2006  Tim Janik  <timj@gtk.org>

	* r+d-files/: new directory for various Research & Development files
	(scripts, docs, etc.) that aren't currently/actively/directly used by
	the project.

Mon Oct 30 19:12:12 2006  Tim Janik  <timj@gtk.org>

	* tools/bsefextract.cc: some cosmetic fixups. fixed printf format strings 
	for size_t types. 

	* tools/bsewavetool.cc: resolved C++ pow() call ambiguities.

Wed Oct 25 17:47:44 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Implemented --join-spectrum-slices, which
	allows joining multiple 30ms spectrums (generated by the --spectrum
	option) into one. The main motivation is getting the file size of
	the reference files in the SVN/tarball down.
	If the filesize doesn't matter, don't use this option, as it makes
	the comparision less accurate.

Sun Oct 22 17:19:40 2006  Tim Janik  <timj@gtk.org>

	* web/news.doxi: minor fixups, rotate news.

Sun Oct 22 22:37:16 2006  Tim Janik  <timj@gtk.org>

	* launchers/suidmain.c: improved error message slightly.

Sun Oct 22 22:21:44 2006  Tim Janik  <timj@gtk.org>

	* launchers/suidmain.c: drop priviledges more reliably by re-querying
	the effective user id with geteuid() instead of just catching errors.

Sun Oct 22 14:31:48 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* web/news.doxi: A summary of the things that happened since the last
	release.
